--- a/wibb-android/app/src/main/res/layout/activity_main.xml
+++ b/wibb-android/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
                         android:layout_height="32dp"
                         android:layout_centerVertical="true"
                         app:tint="@color/textLight"
-                        android:src="@drawable/ic_baseline_error_outline_24dp" />
+                        android:src="@drawable/ic_baseline_error_outline_24dp"
+                        android:contentDescription="@string/content_desc_warning" />
 
                 <TextView
                         android:layout_width="match_parent"
@@ -42,7 +43,7 @@
                         android:layout_marginEnd="10dp"
                         android:layout_toStartOf="@id/image_button_x_card_invalid_hint"
                         android:layout_toEndOf="@+id/image_card_invalid_hint"
-                        android:text="@string/some_offers_listed_here"
+                        android:text="@string/warning_offer_without_date"
                         android:textColor="@color/textLight"
                         android:textSize="15sp" />
 
@@ -54,7 +55,57 @@
                         android:tint="@color/textLight"
                         android:background="@android:color/transparent"
                         android:onClick="hideInvalidHint"
-                        android:src="@drawable/ic_baseline_close_24dp" />
+                        android:src="@drawable/ic_baseline_close_24dp"
+                        android:contentDescription="@string/content_desc_close_this_warning" />
+
+            </RelativeLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+                android:id="@+id/card_no_favourites"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:cardBackgroundColor="@color/red"
+                app:cardCornerRadius="?attr/cornerRadius">
+
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:id="@+id/image_card_no_favourites"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_centerVertical="true"
+                        app:tint="@color/textLight"
+                        android:src="@drawable/ic_baseline_error_outline_24dp"
+                        android:contentDescription="@string/content_desc_warning" />
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_toStartOf="@id/image_button_x_card_no_favourites"
+                        android:layout_toEndOf="@+id/image_card_no_favourites"
+                        android:text="@string/warning_no_favourites"
+                        android:textColor="@color/textLight"
+                        android:textSize="15sp" />
+
+                <ImageButton
+                        android:id="@+id/image_button_x_card_no_favourites"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:tint="@color/textLight"
+                        android:background="@android:color/transparent"
+                        android:onClick="hideNoFavouritesHint"
+                        android:src="@drawable/ic_baseline_close_24dp"
+                        android:contentDescription="@string/content_desc_close_this_warning" />
 
             </RelativeLayout>
 
@@ -72,7 +123,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/no_offers"
+            android:text="@string/warning_no_offers"
             android:visibility="gone">
 
     </TextView>
@@ -87,6 +138,7 @@
             android:tint="@color/textDark"
             app:backgroundTint="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-            app:layout_constraintEnd_toEndOf="@+id/linearLayout" />
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+            android:contentDescription="@string/content_desc_add_new_offer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
