--- a/wibb-android/app/src/main/res/xml/network_security_config.xml
+++ b/wibb-android/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">localhost</domain>
         <domain includeSubdomains="true">10.0.2.2</domain>
+        <domain includeSubdomains="true"> 192.168.178.43</domain>
+        <domain includeSubdomains="true"> 192.168.178.44</domain>
     </domain-config>
 </network-security-config>
