refactor(android): General tech debt and cleanup
Part 3: Favourites

--- a/wibb-android/app/src/main/res/values/keys.xml
+++ b/wibb-android/app/src/main/res/values/keys.xml
@@ -7,4 +7,5 @@
     <string translatable="false" name="key_pref_favourites_beers">pref_favourites_beers</string>
     <string translatable="false" name="key_pref_favourites_stores">pref_favourites_stores</string>
     <string translatable="false" name="key_pref_feedback">pref_feedback</string>
+    <string translatable="false" name="key_pref_favourites">pref_favourites</string>
 </resources>
