--- a/wibb-android/app/src/main/res/values/styles.xml
+++ b/wibb-android/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
 
         <!-- Branding -->
         <item name="colorAccent">@color/colorAccent</item>
